# icra2019

dq_robotics/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~  setup.py  setup.py~
dq_robotics/config/: acc_control_params.cfg  acc_control_params_kdl.cfg  baxter_param_mod.yaml  controller_param.yaml  finger_params.yaml  foamGraspHandJointStates  foamGraspHandJointStates~  velocity_ffController_param.yaml
dq_robotics/include/dq_robotics/: DQoperations.cpp  DQoperations.cpp~  DQoperations.h  ar10_kinematics.h  baxter_dq.cpp  baxter_dq.h  baxter_poseControl_server.h  baxter_poseControl_server.h~  baxter_poseControl_server_2.h  dq_controller.cpp  dq_controller.cpp~  dq_controller.h  dq_controller.h~  graph.cpp  jacDotSolver.cpp  jacDotSolver.hpp  manipulation_task_controller.h  pseudo_inversion.h
dq_robotics/launch/: ar10_fingerKinematics.launch  baxter_ar10_kinematics.launch  baxter_dq.launch  baxter_dq.launch~  baxterposeControlServer.launch  graspControl.launch  rosbagRviz.launch  test_DQ_error_frame.launch  tf_abs.launch
dq_robotics/model/: ar10_right.urdf  ar10_standalone.rviz  dual_arm.rviz  test.rviz  test_2.rviz
dq_robotics/msg/: ControllerPerformance.msg  DualArmPlotData.msg  ResolveAccControlPrfmnc.msg  ResolveAccControlPrfmnc_processed.msg
dq_robotics/results/: 5.session1_2018-07-20-16-33-42.bag  6.session3_2018-07-20-16-37-09.bag
dq_robotics/results/1.absFrameMovinginXandZ/: _slash_dq_robotics_slash_results.csv  _slash_dq_robotics_slash_results_mod.csv  _slash_dq_robotics_slash_results_mod1.csv  _slash_dq_robotics_slash_results_mod1.csv~  _slash_rosout.csv  rosout.csv
dq_robotics/results/2.everythingMovingAbsXandZchanginRelrotationSameLikeBefore/: _slash_dq_robotics_slash_results.csv  _slash_dq_robotics_slash_results_mod.csv  _slash_rosout.csv  rosout.csv
dq_robotics/results/3.relativeRotationAlong-xFrameAnd-veTraslationRelativeAlongYAxis/: _slash_dq_robotics_slash_results.csv  _slash_dq_robotics_slash_results_mod.csv  _slash_rosout.csv  rosout.csv
dq_robotics/results/4.session1_2018-07-20-16-24-14/: _slash_dq_robotics_slash_results.csv  _slash_dq_robotics_slash_results_mod.csv  _slash_rosout.csv  rosout.csv
dq_robotics/rviz/: acc_cntrl.rviz
dq_robotics/src/: ar10_client.cpp  ar10_kinematics.cpp  baxter_AbsRelative_Control.cpp  baxter_ar10_kinematics.cpp  baxter_poseControl_server.cpp  baxter_poseControl_server_2.cpp  baxter_setJointToZero.py  kdl_controller.cpp  kdl_controller_new.cpp  kdl_convntnl_controller.cpp  manipulation_task_controller.cpp
dq_robotics/src/resolvedAccControl/: disable_gravity_baxSDK.cpp  dq_control_regu.yaml  new_traj_resolved_acc_control.cpp  plotTraj.perspective  resolved_acc_control.cpp  result_analyzer_ResolcedAccControl.cpp
dq_robotics/src/resolvedAccControl/result/: dqController.bag  dq_190_6_20secs.csv  dq_z_axis_0.01_pitch.csv  quatBest_270_8_20secs.csv  quatController.bag  quatVecController.bag  quatVec_z_axis_0.01_pitch.csv  quat_190_6_20secs.csv  quat_z_axis_0.01_pitch.csv  test2DQ0pitch.bag  test2dq0pitch.csv  test2quat0pitch.bag  test2quat0pitch.csv
dq_robotics/src/resolvedAccControl/result/old/: test1jointCmd.bag  timeDQVsKDL.bag
dq_robotics/src/test/: bag2csv_BaxterControl.cpp  baxterTaskSpaceClient.cpp  controllerPerformancePlot.py  example.cc  fake_ar10_jointStates.cpp  grasp_client_test.cpp  kdl_convntnl_controller.cpp  rviz_shape_publisher.cpp  testPlt.cpp  test_graph.cpp  test_jointPub.py  test_plot.py  test_rbdl_ros.cpp
dq_robotics/srv/: BaxterControl.srv  Grasp.srv  IkHand.srv  IkHand.srv~  handIK.srv~
